# xiv-data-oxidizer

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  config.yml  config.yml.example  extract.sh  run.bat
src/: config.rs  exd_schema.rs  export.rs  formatter.rs  image_export.rs  main.rs  media_export.rs
