[package]
edition = "2024"
name = "xiv-data-oxidizer"
version = "0.1.0"

[dependencies]
csv = "1.3.1"
flate2 = "1.1.2"
image = {version = "0.25", default-features = false}
ironworks = {version = "0.4.1", features = ["excel", "sestring", "sqpack", "tex"], git = "https://github.com/ackwell/ironworks"}
regex = "1.12.2"
reqwest = {version = "0.12", default-features = false, features = ["blocking", "rustls-tls"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yml = "0.0.12"
texture2ddecoder = "0.1.2"
webp = {version = "0.3.1", default-features = false}
